<?xml version="1.0"?>
<package>
  <name>car_interface</name>
  <version>1.0.0</version>
  <description>An interface that lets us control the robot by providing linear and angular velocity for the chassis.</description>

  <author email="afdaniele@ttic.edu">Andrea F. Daniele</author>
  <maintainer email="afdaniele@ttic.edu">Andrea F. Daniele</maintainer>

  <license>private</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>duckietown_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
